fix(mq): reject unroutable RabbitMQ publishes